# es-rs

./: Cargo.toml  docker-compose.yml
database/migrations/: V1__init.sql
es/: Cargo.toml
es-macros/: Cargo.toml
es-macros/src/: lib.rs
es/examples/: example.rs
es/src/: dispatch.rs  error.rs  lib.rs
es/src/postgres/: event.rs  mod.rs  transaction.rs
es/src/store/: aggregate.rs  event.rs  mod.rs  snapshot.rs  transaction.rs  view.rs
