[package]
name = "es-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
es = { path = "../es" }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
