[package]
name = "es"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
es-macros = { path = "../es-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
log = "0.4.26"
thiserror = "2.0.11"
num-traits = "0.2.19"

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8.3"
features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"]
optional = true
